--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
   "main": "expo-router/entry",
+  "name": "instagram-layout",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build": "expo export -p web",
+    "start": "npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web",
+    "build": "npx expo export -p web",
     "deploy": "vercel build && vercel deploy --prebuilt"
   },
   "dependencies": {
-    "@types/react": "~18.0.27",
-    "expo": "^49.0.0-beta.4",
-    "expo-constants": "~14.2.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "2.0.0-rc.10",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "@types/react": "~18.2.14",
+    "expo": "^49.0.7",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "2.0.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "nativewind": "2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.12.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "~0.18.7",
+    "react-native-web": "~0.19.6",
     "sass": "^1.62.1",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
-  },
-  "name": "instagram-layout",
-  "version": "1.0.0",
-  "private": true
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/react-native": "0.72.2",
+    "tailwindcss": "3.3.2"
+  }
 }
