--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npx expo start",
+    "start": "sb-rn-get-stories --config-path .ondevice && npx expo start",
     "android": "npx expo start --android",
     "ios": "npx expo start --ios",
     "web": "npx expo start --web",
     "build": "npx expo export -p web",
-    "deploy": "vercel build && vercel deploy --prebuilt"
+    "deploy": "vercel build && vercel deploy --prebuilt",
+    "storybook:web": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@types/react": "~18.2.14",
@@ -36,7 +38,25 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/slider": "^4.4.2",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-controls": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-ondevice-actions": "^6.5.4",
+    "@storybook/addon-ondevice-backgrounds": "^6.5.4",
+    "@storybook/addon-ondevice-controls": "^6.5.4",
+    "@storybook/addon-ondevice-notes": "^6.5.4",
+    "@storybook/addon-react-native-web": "^0.0.21",
+    "@storybook/builder-webpack5": "^6.5.14",
+    "@storybook/manager-webpack5": "^6.5.14",
+    "@storybook/react": "^6.5.16",
+    "@storybook/react-native": "^6.5.4",
     "@types/react-native": "0.72.2",
+    "babel-loader": "^8.3.0",
+    "cross-env": "^7.0.3",
     "tailwindcss": "3.3.2"
   }
 }
