--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "build": "npx expo export -p web",
     "deploy": "vercel build && vercel deploy --prebuilt",
     "storybook:web": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "format": "prettier --write $PWD/\"src/**/*.{ts,tsx}\"",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:ci": "eslint . --quiet --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@types/react": "~18.2.14",
@@ -33,7 +37,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.19.6",
     "sass": "^1.62.1",
-    "typescript": "^5.1.3"
+    "typescript": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -55,8 +59,32 @@
     "@storybook/react": "^6.5.16",
     "@storybook/react-native": "^6.5.4",
     "@types/react-native": "0.72.2",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@react-native-community/eslint-config": "2.0.0",
+    "@types/eslint": "8.4.1",
+    "@types/eslint-plugin-prettier": "3.1.0",
+    "@typescript-eslint/parser": "5.40.1",
+    "babel-eslint": "10.1.0",
     "babel-loader": "^8.3.0",
-    "cross-env": "^7.0.3",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-import-resolver-babel-module": "5.3.2",
+    "eslint-import-resolver-typescript": "3.6.0",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-jest": "27.2.3",
+    "eslint-plugin-jsx-expressions": "1.3.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.33.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "10.0.00",
+    "eslint-plugin-sort-destructure-keys": "1.5.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "eslint-plugin-testing-library": "6.0.0",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "eslint": "^8.47.0",
+    "eslint-config-standard-with-typescript": "37.0.0",
+    "prettier": "3.0.1",
     "tailwindcss": "3.3.2"
   }
 }
