--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "g": "scaffdog generate"
   },
   "dependencies": {
+    "@react-navigation/core": "6.4.9",
+    "@react-navigation/native": "6.1.7",
     "@types/react": "~18.2.14",
     "expo": "^49.0.7",
     "expo-constants": "~14.4.2",
@@ -27,7 +29,6 @@
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "nativewind": "2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
@@ -39,14 +40,17 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.19.6",
     "sass": "^1.62.1",
+    "tailwind-variants": "0.1.14",
+    "twrnc": "3.6.4",
     "typescript": "*"
   },
   "devDependencies": {
-    "scaffdog": "3.0.0",
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@callstack/eslint-config": "13.0.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/eslint-config": "2.0.0",
     "@react-native-community/slider": "^4.4.2",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-controls": "^6.5.16",
@@ -61,17 +65,20 @@
     "@storybook/manager-webpack5": "^6.5.14",
     "@storybook/react": "^6.5.16",
     "@storybook/react-native": "^6.5.4",
-    "@types/react-native": "0.72.2",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@react-native-community/eslint-config": "2.0.0",
     "@types/eslint": "8.4.1",
     "@types/eslint-plugin-prettier": "3.1.0",
+    "@types/react-native": "0.72.2",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "5.40.1",
+    "@typescript-eslint/typescript-estree": "6.5.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "^8.3.0",
+    "eslint": "8.48.0",
     "eslint-config-prettier": "9.0.0",
+    "eslint-config-standard-with-typescript": "37.0.0",
     "eslint-import-resolver-babel-module": "5.3.2",
     "eslint-import-resolver-typescript": "3.6.0",
+    "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.28.0",
     "eslint-plugin-jest": "27.2.3",
     "eslint-plugin-jsx-expressions": "1.3.1",
@@ -85,9 +92,8 @@
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-testing-library": "6.0.0",
     "eslint-plugin-unused-imports": "3.0.0",
-    "eslint": "^8.47.0",
-    "eslint-config-standard-with-typescript": "37.0.0",
     "prettier": "3.0.1",
+    "scaffdog": "3.0.0",
     "tailwindcss": "3.3.2"
   },
   "expo": {
@@ -105,5 +111,8 @@
   "overrides": {
     "react-docgen-typescript": "2.2.2",
     "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
+  },
+  "engines": {
+    "node": ">=8.0.0"
   }
 }
