--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "storybook:native": "sb-rn-get-stories --config-path .storybook/native && EXPO_PUBLIC_STORYBOOK_ENABLED=true npx expo start",
+    "storybook:native": "sb-rn-get-stories --config-path .storybook/native && npx expo start",
     "start": "sb-rn-get-stories --config-path .storybook/native && npx expo start",
     "android": "npx expo start --android",
     "ios": "npx expo start --ios",
@@ -20,38 +20,37 @@
     "g": "scaffdog generate"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/core": "6.4.9",
     "@react-navigation/native": "6.1.7",
     "@types/react": "~18.2.14",
     "expo": "^49.0.7",
     "expo-constants": "~14.4.2",
     "expo-linking": "~5.0.2",
-    "expo-router": "2.0.0",
+    "expo-router": "^2.0.8",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "~0.19.6",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-web": "~0.19.9",
     "sass": "^1.62.1",
     "tailwind-variants": "0.1.14",
     "twrnc": "3.6.4",
-    "typescript": "*"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@callstack/eslint-config": "13.0.2",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/eslint-config": "2.0.0",
-    "@react-native-community/slider": "^4.4.2",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-controls": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
@@ -61,40 +60,28 @@
     "@storybook/addon-ondevice-controls": "^6.5.4",
     "@storybook/addon-ondevice-notes": "^6.5.4",
     "@storybook/addon-react-native-web": "^0.0.21",
-    "@storybook/builder-webpack5": "^6.5.14",
-    "@storybook/manager-webpack5": "^6.5.14",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
-    "@storybook/react-native": "^6.5.4",
-    "@types/eslint": "8.4.1",
-    "@types/eslint-plugin-prettier": "3.1.0",
-    "@types/react-native": "0.72.2",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "5.40.1",
-    "@typescript-eslint/typescript-estree": "6.5.0",
+    "@storybook/react-native": "^6.5.6",
+    "@types/eslint": "8.44.3",
+    "@types/eslint-plugin-prettier": "3.1.1",
+    "@types/react-native": "0.72.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "6.7.3",
+    "@typescript-eslint/typescript-estree": "6.7.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "^8.3.0",
-    "eslint": "8.48.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-config-standard-with-typescript": "37.0.0",
-    "eslint-import-resolver-babel-module": "5.3.2",
-    "eslint-import-resolver-typescript": "3.6.0",
-    "eslint-plugin-flowtype": "8.0.3",
-    "eslint-plugin-import": "2.28.0",
-    "eslint-plugin-jest": "27.2.3",
-    "eslint-plugin-jsx-expressions": "1.3.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "5.0.0",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.33.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-simple-import-sort": "10.0.00",
+    "babel-plugin-module-resolver": "5.0.0",
+    "eslint": "8.50.0",
+    "eslint-config-universe": "12.0.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
-    "eslint-plugin-testing-library": "6.0.0",
+    "eslint-plugin-testing-library": "6.0.2",
     "eslint-plugin-unused-imports": "3.0.0",
-    "prettier": "3.0.1",
+    "prettier": "3.0.3",
     "scaffdog": "3.0.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.3"
   },
   "expo": {
     "install": {
