feat: bun package manager

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "storybook:native": "sb-rn-get-stories --config-path .storybook/native && npx expo start",
-    "start": "sb-rn-get-stories --config-path .storybook/native && npx expo start",
-    "android": "npx expo start --android",
-    "ios": "npx expo start --ios",
-    "web": "npx expo start --web",
-    "build": "npx expo export -p web",
+    "storybook:native": "sb-rn-get-stories --config-path .storybook/native && bunx expo start",
+    "start": "sb-rn-get-stories --config-path .storybook/native && bunx expo start",
+    "android": "bunx expo start --android",
+    "ios": "bunx expo start --ios",
+    "web": "bunx expo start --web",
+    "build": "bunx expo export -p web",
     "deploy": "vercel build && vercel deploy --prebuilt",
     "storybook:web": "start-storybook --config-dir .storybook/web -p 6006",
     "build-storybook": "build-storybook",
