--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,8 @@
     "printWidth": 100,
     "tabWidth": 2,
     "singleQuote": true,
-    "bracketSameLine": false
+    "bracketSameLine": true,
+    "trailingComma": "none",
+    "semi": false,
+    "arrowParens": "avoid"
 }
