--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "storybook:web": "start-storybook --config-dir .storybook/web -p 6006",
     "build-storybook": "build-storybook",
     "format": "prettier --write $PWD/\"src/**/*.{ts,tsx}\"",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:ci": "eslint . --quiet --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx ",
+    "lint:ci": "eslint ./src --quiet --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npm run lint --fix",
     "g": "scaffdog generate"
   },
   "dependencies": {
@@ -27,7 +27,9 @@
     "@react-navigation/native": "6.1.7",
     "@types/react": "~18.2.14",
     "expo": "^49.0.7",
+    "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
+    "expo-firebase-analytics": "^8.0.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.8",
     "expo-splash-screen": "~0.20.5",
@@ -75,6 +77,7 @@
     "babel-plugin-module-resolver": "5.0.0",
     "eslint": "8.50.0",
     "eslint-config-universe": "12.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-testing-library": "6.0.2",
