--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "expo-constants": "~14.4.2",
     "expo-firebase-analytics": "^8.0.0",
     "expo-linking": "~5.0.2",
+    "expo-localization": "~14.3.0",
     "expo-router": "^2.0.8",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "i18n-js": "^4.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
