--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx ",
     "lint:ci": "eslint ./src --quiet --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "npm run lint --fix",
+    "test": "jest --watch --coverage=false --changedSince=origin/main",
+    "testDebug": "jest -o --watch --coverage=false",
+    "test:ci": "jest",
+    "updateSnapshots": "jest -u --coverage=false",
     "g": "scaffdog generate"
   },
   "dependencies": {
@@ -25,6 +29,7 @@
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/core": "6.4.9",
     "@react-navigation/native": "6.1.7",
+    "@types/jest": "^29.5.5",
     "@types/react": "~18.2.14",
     "expo": "^49.0.7",
     "expo-build-properties": "~0.8.3",
@@ -49,7 +54,7 @@
     "sass": "^1.62.1",
     "tailwind-variants": "0.1.14",
     "twrnc": "3.6.4",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -64,6 +69,11 @@
     "@storybook/addon-ondevice-controls": "^6.5.4",
     "@storybook/addon-ondevice-notes": "^6.5.4",
     "@storybook/addon-react-native-web": "^0.0.21",
+    "@testing-library/react-native": "^12.3.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "jest": "29.7.0",
+    "jest-expo": "^49.0.0",
+    "jest-svg-transformer": "1.0.0",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
@@ -71,15 +81,26 @@
     "@types/eslint": "8.44.3",
     "@types/eslint-plugin-prettier": "3.1.1",
     "@types/react-native": "0.72.3",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "6.7.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "@typescript-eslint/typescript-estree": "6.7.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "^8.3.0",
     "babel-plugin-module-resolver": "5.0.0",
     "eslint": "8.50.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-import-resolver-babel-module": "5.3.2",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-jest": "27.4.2",
+    "eslint-plugin-jsx-expressions": "1.3.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-config-universe": "12.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-testing-library": "6.0.2",
@@ -105,6 +126,6 @@
     "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=18"
   }
 }
