--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "storybook:native": "sb-rn-get-stories --config-path .storybook/native && bunx expo start",
     "start": "sb-rn-get-stories --config-path .storybook/native && bunx expo start",
-    "android": "bunx expo start --android",
-    "ios": "bunx expo start --ios",
-    "web": "bunx expo start --web",
+    "android": "bun run start --android",
+    "ios": "bun run start --ios",
+    "web": "bun run start --web",
     "build": "bunx expo export -p web",
     "deploy": "vercel build && vercel deploy --prebuilt",
     "storybook:web": "start-storybook --config-dir .storybook/web -p 6006",
@@ -69,15 +69,12 @@
     "@storybook/addon-ondevice-controls": "^6.5.4",
     "@storybook/addon-ondevice-notes": "^6.5.4",
     "@storybook/addon-react-native-web": "^0.0.21",
-    "@testing-library/react-native": "^12.3.0",
-    "@testing-library/jest-native": "^5.4.3",
-    "jest": "29.7.0",
-    "jest-expo": "^49.0.0",
-    "jest-svg-transformer": "1.0.0",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/react-native": "^6.5.6",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.3.0",
     "@types/eslint": "8.44.3",
     "@types/eslint-plugin-prettier": "3.1.1",
     "@types/react-native": "0.72.3",
@@ -89,6 +86,7 @@
     "babel-plugin-module-resolver": "5.0.0",
     "eslint": "8.50.0",
     "eslint-config-prettier": "9.0.0",
+    "eslint-config-universe": "12.0.0",
     "eslint-import-resolver-babel-module": "5.3.2",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.28.1",
@@ -100,12 +98,15 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
-    "eslint-config-universe": "12.0.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-sort-keys-fix": "1.1.2",
     "eslint-plugin-testing-library": "6.0.2",
     "eslint-plugin-unused-imports": "3.0.0",
+    "jest": "29.7.0",
+    "jest-expo": "^49.0.0",
+    "jest-svg-transformer": "1.0.0",
     "prettier": "3.0.3",
+    "react-docgen-typescript-plugin": "1.0.5",
     "scaffdog": "3.0.0",
     "tailwindcss": "3.3.3"
   },
